# fastapi-rag

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
app/: app.py
data/: corpus.db
data/indexes/: docs.faiss  docs.ids.npy  docs.ids.pkl
data/indexes/docs.bm25/: data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
eval_data/: ground_truth.jsonl
src/fastapi_rag/: cli.py  config.py
src/fastapi_rag/corpus/: __init__.py  chunker.py  github.py  loader.py  models.py  store.py
src/fastapi_rag/eval/: __init__.py  harness.py  metrics.py
src/fastapi_rag/generation/: __init__.py  generator.py
src/fastapi_rag/retrieval/: __init__.py  bm25.py  dense.py  hybrid.py  reranker.py
tests/: test_chunker.py
