[project]
name = "fastapi-rag"
version = "0.1.0"
description = "RAG assistant for FastAPI: hybrid retrieval over docs, GitHub issues, and Stack Overflow"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Nikita Pevin", email = "nikpevin@gmail.com" },
]
dependencies = [
    # Core ML / embeddings
    "sentence-transformers>=3.0.0",
    "torch>=2.2.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
    # Text processing
    "tiktoken>=0.7.0",
    "markdown-it-py>=3.0.0",
    # Configuration and utilities
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.1",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "bm25s>=0.3.9",
    "pystemmer>=3.0.0",
    "google-genai>=2.2.0",
    "streamlit>=1.57.0",
]

[project.optional-dependencies]
# Phase B: retrieval + RAG
retrieval = [
    "bm25s>=0.2.0",
    "PyStemmer>=2.2.0",
]
generation = [
    "google-genai>=0.3.0",
]
# Phase C: evaluation
eval = [
    "ragas>=0.2.0",
    "datasets>=2.20.0",
]
# Phase C: web demo
app = [
    "streamlit>=1.36.0",
]

[project.scripts]
fastapi-rag = "fastapi_rag.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_rag"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
